@@ -1,3 +1,8 @@
+2006-07-03	Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>
+	* CodeGen/templates/ImageReader.cs
+	  Mono.Cecil.Binary/ImageReader.cs:
+	  	CompactFramework compatibility.
+		
 2006-07-02	Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>
 
 	* CodeGen/templates/ImageReader.cs
